Alterado funcionamento da rota do backend e ajustado fonte de dados dos convidados no front end
