# Back-end/PVWApi/PVWApi/bin/Release/net6.0/swagger.json
@@ -879,7 +879,10 @@
           "200": {
             "description": "Success",
             "schema": {
-              "$ref": "#/definitions/Convidado"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Convidado"
+              }
             }
           }
         }
